--- a/bloco_27(Camada de serviço e Arquitetura Rest e Restful)/dia_02(arquitetura de software - camada de controller e service)/cep_lookup/package.json
+++ b/bloco_27(Camada de serviço e Arquitetura Rest e Restful)/dia_02(arquitetura de software - camada de controller e service)/cep_lookup/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mysql2": "^2.3.0",
     "node": "^16.6.1"
   },
   "devDependencies": {
