--- a/bloco_27(Camada de serviço e Arquitetura Rest e Restful)/dia_02(arquitetura de software - camada de controller e service)/cep_lookup/package.json
+++ b/bloco_27(Camada de serviço e Arquitetura Rest e Restful)/dia_02(arquitetura de software - camada de controller e service)/cep_lookup/package.json
@@ -14,8 +14,10 @@
   "author": "dennis marcelo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "mysql2": "^2.3.0",
     "node": "^16.6.1"
   },
