--- a/bloco_28(Autenticação e Upload de Arquivos)/dia_03(Testando APIs com testes de integração)/aula - testes/package.json
+++ b/bloco_28(Autenticação e Upload de Arquivos)/dia_03(Testando APIs com testes de integração)/aula - testes/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "./api/server.js",
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "nodemon ./src/api/server.js",
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit"
   },
   "dependencies": {
     "bcrypt-nodejs": "~0.0.3",
@@ -14,5 +15,10 @@
     "moment": "~2.29.1",
     "mongodb": "^3.6.2",
     "nodemon": "~2.0.4"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.1",
+    "sinon": "^11.1.2"
   }
 }
